--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <section class="container principal">
 <div class="container__caixa">
 <h1>Este é o pé de soja na forma inicial após o plantio, é a primera fase para um bom começo</h1>
-<img src="img/plantio-soja-Mapa.jpg" alt="Soja" class="container__imagem">
+<img src="img/soja-1479485951.jpg" alt="Soja" class="container__imagem">
 
 </div>
 </section>
 <section class="container secundario">
-<img src="img/images (1).jpg" alt="trigo" class="secundario__imagem">
+<img src="img/uniport.jpg" alt="trigo" class="secundario__imagem">
 <div class="container__descricao">
 <h2 class="descricao__titulo">Essa é a segunda fase que o agricultor enfrenta</h2>
 <p class="descricao__texto">O uso de defencivos agricolas nas lavouras, é essencial para uma boa produção</p>
@@ -35,27 +35,27 @@ Aqui está a penultima etapa do soja, a colheita.
 A baixo está o soja na sua útima fase, o produto após a industrialização.
 </p>
 </div>
-<img src="img/soja.webp" alt="mandioca" class="secundario__imagem">
+<img src="img/soja-1479485951.jpg" alt="mandioca" class="secundario__imagem">
 </section>
 <section class="dispositivos">
 <h2 class="dispositivos__titulo">.</h2>
 <ul class="dispositivos__lista">
 <li>
-<img src="img/D_NQ_NP_961739-MLB76244209699_052024-O.webp" alt="oleo de soja" class="img-lista">
+<img src="img/ÓLEO-DE-SOJA-SOYA.jpg" alt="oleo de soja" class="img-lista">
 <h3 class="lista__item">Óleo de soja</h3>
 </li>
 <li>
-<img src="img/cremosa-13-10-23-060602.png" alt="margarina" class="mar-lista">
+<img src="img/OIP (2).jfif" alt="margarina" class="mar-lista">
 <h3 class="lista__item">Margrina</h3>
 </li>
 <li>
-<img src="img/download (2).jpg" alt="farelo">
+<img src="img/OIP (3).jfif" alt="farelo">
 <h3 class="lista__item">Rações</h3>
 </li>
 </ul>
 </section>
 <footer class="rodape">
-<p class="rodape__texto">Gustavo C. Rengel®</p>
+<p class="rodape__texto">Leonardo de moura da rosa®</p>
 <p class="rodape__texto">Do campo a cidade colhendo oportunidades</p>
 </footer>
 </body>
