--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Aqui está a penultima etapa do soja, a colheita.
 A baixo está o soja na sua útima fase, o produto após a industrialização.
 </p>
 </div>
-<img src="img/soja-1479485951.jpg" alt="mandioca" class="secundario__imagem">
+<img src="img/OIP.jfif" alt="mandioca" class="secundario__imagem">
 </section>
 <section class="dispositivos">
 <h2 class="dispositivos__titulo">.</h2>
