--- a/sobre.html
+++ b/sobre.html
@@ -79,10 +79,10 @@
 
         <h3>Entre em contato comigo pelos seguintes canais:</h3>
         <div class="social-icons">
-            <a href="https://www.instagram.com/erickmth__" target="_blank">
+            <a href="https://www.instagram.com/leozrdo_Silva_18_" target="_blank">
                 <img src="img/instagram.png" alt="Instagram">
             </a>
-            <a href="mailto:erickmth4565@gmail.com">
+            <a href="mailto:leonardorosa3660@gmail.com">
                 <img src="img/email.png" alt="Email">
             </a>
         </div>
