--- a/sobre.html
+++ b/sobre.html
@@ -79,7 +79,7 @@
 
         <h3>Entre em contato comigo pelos seguintes canais:</h3>
         <div class="social-icons">
-            <a href="https://www.instagram.com/vieravalencio" target="_blank">
+            <a href="https://www.instagram.com/leozardo_de_viera" target="_blank">
                 <img src="img/instagram.png" alt="Instagram">
             </a>
             <a href="mailto:leonardorosa3660@gmail.com">
