--- a/index.html
+++ b/index.html
@@ -1,42 +1,61 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Calendário da Colheita</title>
-  <link rel="stylesheet" href="style.css">
+	<meta charset="utf-8">
+		<STYLE TYPE="text/css">
+			body{background-image: url(https://i.imgur.com/fF2vVcQ.jpg); background-size: 950px;}
+			
+			h1{text-align: center; background-color: whitesmoke; font-size: 35px;}
+			
+			h2{background-color: whitesmoke; style=font-size: 22px;text-align: left; margin-right: 100px; margin-left: 50px}
+			
+			p{background-color: whitesmoke; margin-right: 100px; margin-left: 50px; font-size: 20;}
+			
+			li{background-color: whitesmoke; margin-right: 100px; margin-left: 50px; font-size: 20;}
+		</STYLE>
+
+	<title>
+		APMF - Col. Est. José Marcondes Sobrinho - ETI
+	</title>
 </head>
-<body>
-  <header>
-    <h1>🌽 Calendário da Colheita</h1>
-    <p>Fique por dentro das frutas e hortaliças da estação!</p>
-  </header>
 
-  <main>
-    <label for="mes">Selecione um mês:</label>
-    <select id="mes" onchange="mostrarSafra()">
-      <option value="">-- Escolha --</option>
-      <option value="janeiro">Janeiro</option>
-      <option value="fevereiro">Fevereiro</option>
-      <option value="marco">Março</option>
-      <option value="abril">Abril</option>
-      <option value="maio">Maio</option>
-      <option value="junho">Junho</option>
-      <option value="julho">Julho</option>
-      <option value="agosto">Agosto</option>
-      <option value="setembro">Setembro</option>
-      <option value="outubro">Outubro</option>
-      <option value="novembro">Novembro</option>
-      <option value="dezembro">Dezembro</option>
-    </select>
-
-    <section id="resultado"></section>
-  </main>
-
-  <footer>
-    <p>Projeto Agrinho - Conectando Campo e Cidade 🌱</p>
-  </footer>
-
-  <script src="script.js"></script>
+<body>	
+	<h1>
+		Associação de Pais, Mestres e Funcionários
+			<p style="font-size: 30px;">
+				Colégio Estadual José Marcondes Sobrinho - ETI
+			</p>
+	</h1>
+	
+	<h2>
+		<strong>O que é a APMF?</strong>	
+	</h2> 
+	
+	<p style="text-align: justify;">
+		A Associação de Pais, Mestres e Funcionários, trata-se de Pessoa Jurídica de direito privado, consituída na forma de sociedade civil. É o órgão de representação da Comunidade Escolar, Pais/Responsáveis, Professores e Funcionários (desde que maiores de 18 anos), do Colégio Estadual José Marcondes Sobrinho, não tendo caráter político-partidário, religioso, racial e nem fins lucrativos, não sendo remunerados os seus Dirigentes e Conselheiros.
+	</p>
+	
+	<h2>
+		<strong>Qual a sua finalidade?</strong>
+	</h2>
+	
+	<p>
+		A APMF tem por finalidade representar os interesses dos estudantes, dos pais e comunidade escolar, contribuindo para a melhoria da qualidade do ensino-apresendizagem, garantindo a todos uma escola pública, gratuita e universal.
+	</p>
+	
+	<h2>
+		<strong>Algumas de suas atribuições:</strong>
+	</h2>
+	
+	<p>
+		<li>Adquirir bens de consumo e permanentes;</li>
+		<li> Discutir ações que possam contribuir para a qualidade do ensino e integrar família, escola e comunidade;</li>
+		<li>Viabilizar a participação de todos na gestão da escola pública;</li>
+		<li>Colaborar com a manutenção e a conservação das instalações da escola, bem como conscientizar quanto as atitudes de preservação;</li>
+		<li>Realizar projetos envolvendo toda a comunidade, de forma a contribuir para o maior aproveitamento escolar do estudante;</li>
+	</p>
+	
+	<p>
+		É importante ressaltar ainda que as ações da APMF devem estar em sintonia com a Proposta Pedagógica da escola e com a realidade e interesses da comunidade escolar.
+	</p>
 </body>
-</html>
