--- a/sobre.html
+++ b/sobre.html
@@ -82,7 +82,7 @@
             <a href="https://www.instagram.com/erickmth__" target="_blank">
                 <img src="img/instagram.png" alt="Instagram">
             </a>
-            <a href="mailto:erickmth4565@gmail.com">
+            <a href="mailto:leonardorosa3660@gmail.com">
                 <img src="img/email.png" alt="Email">
             </a>
         </div>
