--- a/index.html
+++ b/index.html
@@ -252,14 +252,9 @@
                 <p>Estudante do 3° ano de Ciências da Natureza</p>
                 <hr>
                 <div style="display: flex; width: 100%;">
-                    <a href="https://instagram.com/arthur_feltz" target="_blank" title="Instagram"><ion-icon name="logo-instagram"></ion-icon></a>
-                    <a href="mailto:arthurrangel563@gmail.com" target="_blank" title="E-mail"><ion-icon name="mail-outline"></ion-icon></a>
-                    <a href="tel:+5541997318867" target="_blank" title="Telefone"><ion-icon name="phone-portrait-outline"></ion-icon></a>
-                    <a href="https://wa.me/+5541997318867" target="_blank" title="Whatsapp"><ion-icon name="logo-whatsapp"></ion-icon></a>
-                </div>
-            </div>
+                    <a href="https://instagram.com/leozardo_de_viera" target="_blank" title="Instagram"><ion-icon name="logo-instagram"></on-icon>
+                    <a href="mailto:leonardorosa3660@gmail.com" target="_blank" title="E-mail"><ion-icon name="mail-outline"></ion-icon>
         </div>
-
         <img src="assets/img/faep.png" alt="Sistema FAEP/SENAR-PR" style="height: 100px; width: auto; margin-left: auto;">
     </footer>
 
